[package]
name = "gui"
version = "0.1.0"
authors = ["craig <craigfay1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gui"
path = "src/lib.rs"

[features]
image_manipulation = []

[dependencies]
glium = "*"
