[package]
name = "open_ui"
description = "🕹 Build cross-platform GUI apps with Rust"
authors = ["craig <craigfay1@gmail.com>"]
version = "2.0.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/craigfay/open_ui"
repository = "https://github.com/craigfay/open_ui"
readme = "README.md"
keywords = ["ui", "window", "game", "graphics", "gui"]
categories = [
    "graphics",
    "gui",
    "game-development",
    "game-engines",
    "rendering",
]
include = [
    "src/lib.rs",
    "Cargo.toml",
]

[dependencies]
glium = "0.31.0"
